# benchmarking

./: .gitignore  3rd-party-licenses.md  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  NOTICE  README  README.md  autogen.sh  configure.ac  do_mem_benchmark.sh
apps/: Makefile.am  itm2str.c  main.c  mfa.c  msfa.c  pea.c
ext/: 0001-openocd_build_shared  0002-openocd-tcl-adding-stm32f407_execution-configuration.patch  autotoolize  libcjson.mk  libini.mk  libmfa.mk  libswo.mk  openocd.mk  recipe  template_configure_ac  template_makefile_am  zlog
ext/patches/openocd/: 0002-openocd-stm32f407-configurations.patch  0002-openocd-tcl-adding-stm32f407_execution-configuration.patch
inc/: common-macros.h  config.h  config_ini.h  debug.h  decoder_swo.h  file.h  form.h  itm2mem_info.h  itm_to_str.h  libcom.h  message.h  perf_ex.h  pipeline.h  pkt_converter.h  processing.h  processing_template.h  stream.h  swd_ctrl.h  uart.h
res/configs/: default_decoder.ini  execution_config.ini.in  memory_heap_config.ini.in  test_config.ini.in
res/tests/: main.elf
src/: Makefile.am  config.c  config_ini.c  decoder_swo.c  file.c  form_cjson.c  itm2mem_info.c  itm_to_str.c  message.c  perf_ex.c  pipeline.c  pkt_converter.c  processing.c  processing_template.c  swd_ctrl.c  uart.c
src/tests/: perf_ex_01.c
tools/: gen-processing.sh  generic-paths.sh.in
