ACLOCAL_AMFLAGS = -I m4

CFLAGS="-g -O0"
CXXFLAGS="-g -O0"

SUBDIRS= src \
 	 apps


clean-local:
	rm -rf @ac_list_folder_ext@


MAINTAINERCLEANFILES = \
	$(srcdir)/INSTALL \
	$(srcdir)/configure \
	$(srcdir)/Makefile.in \
	$(srcdir)/depcomp \
	$(srcdir)/config.guess \
	$(srcdir)/config.sub \
	$(srcdir)/inc/onfig.h.in \
	$(srcdir)/inc/config.h.in~ \
	$(srcdir)/compile \
	$(srcdir)/ltmain.sh \
	$(srcdir)/missing \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/install-sh 

